--- a/stm32/Project.uvprojx
+++ b/stm32/Project.uvprojx
@@ -754,6 +754,16 @@
               <FileType>5</FileType>
               <FilePath>.\Hardware\Buzzer.h</FilePath>
             </File>
+            <File>
+              <FileName>Encoder.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Hardware\Encoder.c</FilePath>
+            </File>
+            <File>
+              <FileName>Encoder.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Hardware\Encoder.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
